--- a/TP_AySO/grupo1.yml
+++ b/TP_AySO/grupo1.yml
@@ -1,17 +1,21 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
-  name: grupo1-replicaset
+        name: nginx-deployment
+        labels:
+                app: nginx
 spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: v1
-  template:
-    metadata:
-      labels:
-        app: v1
-    spec:
-      containers:
-      - name: grupo1
-        image: alpine:3.14
+        replicas: 3
+        selector:
+                matchLabels:
+                        app: nginx
+        template:
+                metadata:
+                        labels:
+                                app: nginx
+                spec:
+                  containers:
+                  - name: nginx
+                    image: aelohim/v1:v1
+                    ports:
+                    - containerPort: 80
